Updated the BCC Mappings page to allow both sender and recipient maps to be defined and edited.
---- Changes since 1.420 ----
Properly handle multiple reject_rbl_client DNS domains on the SMTP Client Restrictions page.
---- Changes since 1.430 ----
Converted all pages to use the new Webmin UI library, for a more consistent and themable look.
Autoreply messages containing non-ASCII characters are now properly quoted-printable encoded.
---- Changes since 1.440 ----
Added a module config option to control if the user is prompted for confirmation before deleting queued messages.
---- Changes since 1.450 ----
Changed the mail queue date format to yyyy/mm/dd, for easier sorting.
---- Changes since 1.490 ----
Added support for the Postfix 2.3 smtpd_tls_security_level option.
Improved Postfix main.cf file parser to skip indented blank lines.
Changed map deletion function to not remove expected line, which can otherwise cause file corruption.
Autoreply messages starting with <html> or <body> will now be sent using the tex
t/html MIME type.
---- Changes since 1.500 ----
If a map is made up of files in multiple directories and a Webmin user has a directory restriction defined, he will be able to edit map entries in files under that directory.
Fixed the descriptions of logged events as shown in the Webmin Actions Log module.
---- Changes since 1.510 ----
Added support for CIDR maps and multiple SMTP client restriction maps.
Added spam checking to the autoreply script, if spamassassin is installed.
---- Changes since 1.550 ----
Fixed a bug that prevented editing of server processes with the same name but different types, and add detection of clashes for servers with the same name and type.
Added an option to the SMTP Authentication page for setting the login and password for Postfix to use when sending email via another mail server.