@@ -79,3 +79,4 @@ Added spam checking to the autoreply script, if spamassassin is installed.
 ---- Changes since 1.550 ----
 Fixed a bug that prevented editing of server processes with the same name but different types, and add detection of clashes for servers with the same name and type.
 Added an option to the SMTP Authentication page for setting the login and password for Postfix to use when sending email via another mail server.
+Destination email addresses that are allowed for relaying can now be configured on the SMTP Server Options page. This makes use of the Postfix relay_recipient_maps directive.
